Fix: Min height for destructive box. Ensures icon is always a good height. Probably still needs to be fixed if message is too long.

--- a/boss/styles.css
+++ b/boss/styles.css
@@ -168,6 +168,8 @@ body {
   padding-left: 70px;
   background-image: url("/boss/img/exclamation-icon.svg");
   background-repeat: no-repeat;
+  min-height: 50px;
+  text-align: center;
 }
 #desktop .modal .exclamation.add-margin {
   margin-bottom: 20px;
